2014-08-15 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/mod_rivet.c: Tcl protecting mutex localized in order to restrict as much as possible
    the protected code and reduce the size of the bottleneck. Still, this is not OK and the current implementation
    is going to be kept to provide functionality of mod_rivet with the worker MPM. We have to explore
    the possibility of calling directly Tcl threading functions.

2014-08-14 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/mod_rivet.c: implemented automatic bridge load mechanism.
    * src/experimental/rivet_worker_mpm.c: starting maximal number of threads (as per mpm_worker configuration)
    * configure.ac: automated parameters when build experimental module.

2014-08-12 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/rivet_[prefork|worker]_mpm.c: bridges integrated. Removed substantial code
    from rivet_prefork_mpm.c and merged with the current approach handling hosts interpreters using
    vhost_interp objects and storing everything in a child process/thread private data
    * src/experimental/apache_config.[c|h]: eventually these files had to be copied here from common
    and modified to reflect the new model for handling server records
    * src/experimental/mod_rivet_common.c: same for this file
    * src/experimental/mod_rivet.c: further generalization of the code to provide consistent
    support for the bridges. Adding a new hook for mpm_master_interp, a function implemented by
    a bridge responsible for returning the child process/thread master interpreter.

2014-08-11 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/rivet_worker_mpm.c: redesigning virtual hosts resource management for threads
    * src/experimental/mod_rivet[c|h]: implementing thread private interpreters management
    * src/experimental/rivetCore.c,rivetInspect.c: I had to move here these files as some API has changed